syntax = "proto2";

package stremio.core.runtime;

option java_package = "com.stremio.core.runtime.msg";

import "stremio/core/types/profile.proto";
import "stremio/core/types/auth_request.proto";

message Event {
  oneof type {
    ProfilePushedToStorage profile_pushed_to_storage = 1;
    LibraryItemsPushedToStorage library_items_pushed_to_storage = 2;
    StreamsPushedToStorage streams_pushed_to_storage = 3;
    SearchHistoryPushedToStorage search_history_pushed_to_storage = 4;
    NotificationsPushedToStorage notifications_pushed_to_storage = 5;
    UserPulledFromAPI user_pulled_from_api = 6;
    UserPushedToAPI user_pushed_to_api = 7;
    AddonsPulledFromAPI addons_pulled_from_api = 8;
    AddonsPushedToAPI addons_pushed_to_api = 9;
    LibrarySyncWithAPIPlanned library_sync_with_api_planned = 10;
    LibraryItemsPushedToAPI library_items_pushed_to_api = 11;
    LibraryItemsPulledFromAPI library_items_pulled_from_api = 12;
    UserAuthenticated user_authenticated = 13;
    UserLoggedOut user_logged_out = 14;
    SessionDeleted session_deleted = 15;
    TraktAddonFetched trakt_addon_fetched = 16;
    TraktLoggedOut trakt_logged_out = 17;
    AddonInstalled addon_installed = 18;
    AddonUpgraded addon_upgraded = 19;
    AddonUninstalled addon_uninstalled = 20;
    SettingsUpdated settings_updated = 21;
    LibraryItemAdded library_item_added = 22;
    LibraryItemRemoved library_item_removed = 23;
    LibraryItemRewinded library_item_rewinded = 24;
    LibraryItemNotificationsToggled library_item_notifications_toggled = 25;
    NotificationsDismissed notifications_dismissed = 26;
    PlayerPlaying player_playing = 27;
    PlayerStopped player_stopped = 28;
    PlayerEnded player_ended = 29;
    TraktPlaying trakt_playing = 30;
    TraktPaused trakt_paused = 31;
    MagnetParsed magnet_parsed = 32;
    TorrentParsed torrent_parsed = 33;
    PlayingOnDevice playing_on_device = 34;
    Error error = 100;
  }

  message ProfilePushedToStorage {
    optional string uid = 1;
  }
  message LibraryItemsPushedToStorage {
    repeated string ids = 1;
  }
  message StreamsPushedToStorage {
    optional string uid = 1;
  }
  message SearchHistoryPushedToStorage {
    optional string uid = 1;
  }
  message NotificationsPushedToStorage {
    repeated string ids = 1;
  }
  message UserPulledFromAPI {
    optional string uid = 1;
  }
  message UserPushedToAPI {
    optional string uid = 1;
  }
  message AddonsPulledFromAPI {
    repeated string transport_urls = 1;
  }
  message AddonsPushedToAPI {
    repeated string transport_urls = 1;
  }
  message LibrarySyncWithAPIPlanned {
    optional string uid = 1;
    required PlanPair plan = 2;
  }
  message LibraryItemsPushedToAPI {
    repeated string ids = 1;
  }
  message LibraryItemsPulledFromAPI {
    repeated string ids = 1;
  }
  message UserAuthenticated {
    required stremio.core.types.AuthRequest auth_request = 1;
  }
  message UserLoggedOut {
    optional string uid = 1;
  }
  message SessionDeleted {
    required string auth_key = 1;
  }
  message TraktAddonFetched {
    optional string uid = 1;
  }
  message TraktLoggedOut {
    optional string uid = 1;
  }
  message AddonInstalled {
    required string transport_url = 1;
    required string id = 2;
  }
  message AddonUpgraded {
    required string transport_url = 1;
    required string id = 2;
  }
  message AddonUninstalled {
    required string transport_url = 1;
    required string id = 2;
  }
  message SettingsUpdated {
    required stremio.core.types.Profile.Settings settings = 1;
  }
  message LibraryItemAdded {
    required string id = 1;
  }
  message LibraryItemRemoved {
    required string id = 1;
  }
  message LibraryItemRewinded {
    required string id = 1;
  }
  message LibraryItemNotificationsToggled {
    required string id = 1;
  }
  message NotificationsDismissed {
    required string id = 1;
  }
  message PlayerPlaying {
    // Empty
  }
  message PlayerStopped {
    // Empty
  }
  message PlayerEnded {
    // Empty
  }
  message TraktPlaying {
    // Empty
  }
  message TraktPaused {
    // Empty
  }
  message MagnetParsed {
    required string magnet = 1;
  }
  message TorrentParsed {
    required bytes torrent = 1;
  }
  message PlayingOnDevice {
    required string device = 1;
  }
  message Error {
    required string error = 1;
    required Event source = 2;
  }
}

message PlanPair {
  repeated string first = 1;
  repeated string second = 2;
}