syntax = "proto2";

package stremio.core.types;

option java_package = "com.stremio.core.types.profile";

import "google/protobuf/timestamp.proto";

message Profile {
  optional Auth auth = 1;
  // repeated Descriptor addons = 2;
  required Settings settings = 3;

  message Settings {
    required string interface_language = 1;
    required string streaming_server_url = 2;
    required bool binge_watching = 3;
    required bool play_in_background = 4;
    required bool hardware_decoding = 6;
    required bool audio_passthrough = 7;
    required string audio_language = 8;
    required string subtitles_language = 9;
    required int32 subtitles_size = 10;
    required string subtitles_font = 11;
    required bool subtitles_bold = 12;
    required int32 subtitles_offset = 13;
    required string subtitles_text_color = 14;
    required string subtitles_background_color = 15;
    required string subtitles_outline_color = 16;
    required int32 subtitles_opacity = 17;
    required bool esc_exit_fullscreen = 18;
    required int64 seek_time_duration = 19;
    required int64 seek_short_time_duration = 20;
    required bool pause_on_minimize = 21;
    optional string secondary_audio_language = 22;
    optional string secondary_subtitles_language = 24;
    optional string player_type = 25;
    required FrameRateMatchingStrategy frame_rate_matching_strategy = 26;
    required int64 next_video_notification_duration = 27;
    required bool surround_sound = 28;
  }

  enum FrameRateMatchingStrategy {
    Disabled = 0;
    FrameRateOnly = 1;
    FrameRateAndResolution = 2;
  }
}

message Auth{
  required string key = 1;
  required User user = 2;
}

message User{
  required string id = 1;
  required string email = 2;
  optional string fb_id = 3;
  optional string avatar = 4;
  required GDPRConsent gdpr_consent = 5;
  required google.protobuf.Timestamp date_registered = 6;
  required google.protobuf.Timestamp last_modified = 7;
  optional google.protobuf.Timestamp premium_expire = 8;
}

message GDPRConsent {
  required bool tos = 1;
  required bool privacy = 2;
  required bool marketing = 3;
  optional string from = 4;
}